# pong-network

./: .gitignore  CMakeLists.txt  README.md  generate.code.bat  main.cpp
design/: modele-echange-donnees.mdj
src/client/: GUI.cpp  GUI.h  GUIState.h  Main.cpp  SocketManager.cpp  SocketManager.h  gui.cpp  gui.h  main.cpp
src/client/SDL2/include/SDL2/: SDL_audio.h
src/client/include/: GUI.h  SocketManager.h
src/common/: lib.cpp
src/common/include/: ClientPacket.h  Constant.h  GameState.h  PaddleDirection.h  Player.h  ServerPacket.h  UUID.h  Utils.h  _ClientPacket.h  _ServerPacket.h  clientpacket.pb.cc  clientpacket.pb.h  serverpacket.pb.cc  serverpacket.pb.h
src/common/protobuf/: clientpacket.proto  generate.code.bat  serverpacket.proto
src/server/: GameManager.cpp  GameManager.h  Main.cpp  Player.h  SocketServer.cpp  Utils.cpp  main.cpp  server.h
src/server/include/: GameManager.h  SocketServer.h
